Añadidos nuevos operadores

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RxJs</title>
+    <title>Pruebas de RxJs</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" href="assets/img/favicon.ico">
 </head>
 <body>
-    <h1>RxJs </h1>
-    <hr>
-    
+    <h1>Pruebas </h1>    
     <script src="bundle.js"></script>
 </body>
 </html>
